test/spec_vectors/simd_lane/fail/module_72.wat
(module (func (result i32) (i32x4.extract_lane 0 (i32.const 0))))